# mygeopy

./: .gitignore  LICENSE.txt  environment.yml  pyproject.toml
.github/workflows/: ci.yml
mygeopy/: triangle.py
mygeopy.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_triangle.py
