[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "mygeopy"
version = "0.1.0a0"
description = "My Python package for working with geometry."
authors = [{name = "Harun Ardiansyah", email="harunardi13@gmail.com"}]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/harunardi/mygeopy"
[project.optional-dependencies]
tests = ["pytest"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"